Transition from perspective(500px) to 'none' is probably wrong https://bugs.webkit.org/show_bug.cgi?id=52700

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-transforms/animation/transform-interpolation-001-expected.txt:
* web-platform-tests/css/css-transforms/animation/transform-perspective-composition-expected.txt:

Source/WebCore:

Test: animations/3d/animate-to-transform-perpective-to-none.html

Fix the interpolation of the `perspective()` transform function. This
is a port of a similar Chromium CL at:
https://chromium-review.googlesource.com/c/chromium/src/+/2924023

* platform/graphics/transforms/PerspectiveTransformOperation.cpp:
(WebCore::PerspectiveTransformOperation::blend):
* platform/graphics/transforms/PerspectiveTransformOperation.h:

LayoutTests:

* platform/glib/imported/w3c/web-platform-tests/css/css-transforms/animation/transform-interpolation-001-expected.txt: Removed.
* animations/3d/animate-to-transform-perpective-to-none-expected.html: Added.
* animations/3d/animate-to-transform-perpective-to-none.html: Added.



Canonical link: https://commits.webkit.org/244648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286289 268f45cc-cd09-0410-ab3c-d52691b4dbfc